update metadata Added archival cover. tag 0.1.0

--- a/metadata.yaml
+++ b/metadata.yaml
@@ -1,11 +1,16 @@
 _repo: The-president-s-daughter_74595
 _version: 0.1.0
+covers:
+- cover_type: archival
+  image_path: 74595-h/images/cover.jpg
 creator:
   author:
     agent_name: Britton, Nan
     gutenberg_agent_id: '57574'
     url: http://www.gutenberg.org/2009/agents/57574
 description: ''
+edition_identifiers:
+  edition_id: http://www.gutenberg.org/ebooks/74595#The-president-s-daughter
 gutenberg_issued: '2024-10-17'
 gutenberg_type: Text
 identifiers:
